hotfix: stop restaurants text from aligning mid

--- a/src/style.scss
+++ b/src/style.scss
@@ -202,7 +202,7 @@ flex-wrap: wrap;
   padding: 15px;
 }
 
-#root > main > section.section {
+#root > main > section.section h2 {
   text-align: center;
 }
 
